--- a/CloneGenerator/Properties/launchSettings.json
+++ b/CloneGenerator/Properties/launchSettings.json
@@ -4,6 +4,10 @@
     "DebugRoslynSourceGenerator": {
       "commandName": "DebugRoslynComponent",
       "targetProject": "../CloneGenerator.Sample/CloneGenerator.Sample.csproj"
+    },
+    "DebugTestsRoslynSourceGenerator": {
+      "commandName": "DebugRoslynComponent",
+      "targetProject": "../CloneGenerator.Tests/CloneGenerator.Tests.csproj"
     }
   }
 }
