--- a/CloneGenerator.Tests/CloneGenerator.Tests.csproj
+++ b/CloneGenerator.Tests/CloneGenerator.Tests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\CloneGenerator.DummyLib\CloneGenerator.DummyLib.csproj"/>
         <ProjectReference Include="..\CloneGenerator\CloneGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
