--- a/DeepCloneGenerator.Tests/DeepCloneGenerator.Tests.csproj
+++ b/DeepCloneGenerator.Tests/DeepCloneGenerator.Tests.csproj
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CloneGenerator.DummyLib\CloneGenerator.DummyLib.csproj"/>
-        <ProjectReference Include="..\CloneGenerator\CloneGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\DeepCloneGenerator.DummyLib\DeepCloneGenerator.DummyLib.csproj" />
+        <ProjectReference Include="..\DeepCloneGenerator\DeepCloneGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
 </Project>
