--- a/DeepCloneGenerator/DeepCloneGenerator.csproj
+++ b/DeepCloneGenerator/DeepCloneGenerator.csproj
@@ -8,9 +8,7 @@
 
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
-
-        <RootNamespace>CloneGenerator</RootNamespace>
-        <PackageId>CloneGenerator</PackageId>
+        <PackageId>DeepCloneGenerator</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
