--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: GitTools
+      uses: GitTools/actions@v0.10.2
+            
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
