--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,6 +39,6 @@ jobs:
         run: dotnet test --no-build --verbosity normal  -c Release
 
       - name: Publish Nuget to GitHub registry
-        run: dotnet nuget push ./DeepCloneGenerator/bin/Release/*.nupkg -k ${NUGET_TOKEN} --skip-duplicate --no-symbols 
+        run: dotnet nuget push ./DeepCloneGenerator/bin/Release/DeepCloneGenerator.${{ steps.gitversion.outputs.nuGetVersion }}.nupkg -k ${NUGET_TOKEN}
         env:
           NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
