--- a/DeepCloneGenerator/DeepCloneGenerator.csproj
+++ b/DeepCloneGenerator/DeepCloneGenerator.csproj
@@ -18,6 +18,9 @@
         <!-- Package the generator in the analyzer directory of the nuget package -->
         <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
         <None Include="../README.md" Pack="true" PackagePath="\"/>
+        <None Include="..\NuGet.config">
+          <Link>NuGet.config</Link>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
