--- a/DeepCloneGenerator.DummyLib/DeepCloneGenerator.DummyLib.csproj
+++ b/DeepCloneGenerator.DummyLib/DeepCloneGenerator.DummyLib.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DeepCloneGenerator\DeepCloneGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\DeepCloneGenerator\DeepCloneGenerator.csproj"/>
+        <ProjectReference Include="..\DeepCloneGenerator.Generator\DeepCloneGenerator.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
 </Project>
