Reference analyzer in generator package

--- a/DeepCloneGenerator.Generator/DeepCloneGenerator.Generator.csproj
+++ b/DeepCloneGenerator.Generator/DeepCloneGenerator.Generator.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
     
     <ItemGroup>
+        <None Include="$(OutputPath)/DeepCloneGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
         <None Include="../README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
