--- a/DeepCloneGenerator/DeepCloneGenerator.csproj
+++ b/DeepCloneGenerator/DeepCloneGenerator.csproj
@@ -14,6 +14,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\DeepCloneGenerator.Analyzers\DeepCloneGenerator.Analyzers\DeepCloneGenerator.Analyzers.csproj" />
         <ProjectReference Include="..\DeepCloneGenerator.Generator\DeepCloneGenerator.Generator.csproj"/>
     </ItemGroup>
 
