--- a/DeepCloneGenerator.Analyzers/DeepCloneGenerator.Analyzers.csproj
+++ b/DeepCloneGenerator.Analyzers/DeepCloneGenerator.Analyzers.csproj
@@ -15,6 +15,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild> <!-- Generates a package at build -->
         <IncludeBuildOutput>false</IncludeBuildOutput> <!-- Do not include the generator as a lib dependency -->
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
